--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "description": "",
   "dependencies": {
     "@apollo/server": "^4.11.3",
+    "@types/mongoose-unique-validator": "^1.0.9",
+    "dotenv": "^16.4.7",
     "graphql": "^16.10.0",
-    "nodemon": "^3.1.9",
-    "uuid": "^11.0.5"
+    "mongoose": "^8.10.1",
+    "mongoose-unique-validator": "^5.0.1",
+    "nodemon": "^3.1.9"
   }
 }
