--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/mongoose-unique-validator": "^1.0.9",
     "dotenv": "^16.4.7",
     "graphql": "^16.10.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.1",
     "mongoose-unique-validator": "^5.0.1",
     "nodemon": "^3.1.9"
